// cockpit.proto - Cockpit management service definitions
//
// Copyright (C) Manoj Jhawar, Intelligent Devices LLC
// Created: 2025-12-28
//
// Cross-device management and coordination

syntax = "proto3";

package com.augmentalis.universalrpc.cockpit;

option java_package = "com.augmentalis.universalrpc.cockpit";
option java_multiple_files = true;

// Device info
message DeviceInfo {
    string device_id = 1;
    string name = 2;
    string platform = 3;          // "android", "ios", "desktop", "web"
    string version = 4;
    bool online = 5;
    int64 last_seen = 6;
    map<string, string> capabilities = 7;
}

// Window info
message WindowInfo {
    string window_id = 1;
    string device_id = 2;
    string title = 3;
    int32 x = 4;
    int32 y = 5;
    int32 width = 6;
    int32 height = 7;
    bool visible = 8;
    bool focused = 9;
}

// Layout preset
message LayoutPreset {
    string preset_id = 1;
    string name = 2;
    repeated WindowLayout windows = 3;
}

message WindowLayout {
    string window_id = 1;
    int32 x = 2;
    int32 y = 3;
    int32 width = 4;
    int32 height = 5;
    string display_id = 6;
}

// Window command
message WindowCommand {
    string request_id = 1;
    string window_id = 2;
    string command = 3;           // "move", "resize", "show", "hide", "focus", "close"
    map<string, string> params = 4;
}

// Device command
message DeviceCommand {
    string request_id = 1;
    string device_id = 2;
    string command = 3;           // "sync", "screenshot", "status"
    map<string, string> params = 4;
}

// Command response
message CockpitResponse {
    string request_id = 1;
    bool success = 2;
    string message = 3;
    string result_json = 4;
}

// Sync request
message SyncRequest {
    string request_id = 1;
    string source_device = 2;
    string target_device = 3;
    repeated string data_types = 4;  // "settings", "commands", "learned_apps"
}

// Sync status
message SyncStatus {
    string request_id = 1;
    string state = 2;             // "pending", "syncing", "completed", "failed"
    float progress = 3;
    string message = 4;
}

// Service definition
service CockpitService {
    // Device management
    rpc RegisterDevice(DeviceInfo) returns (CockpitResponse);
    rpc GetDevices(GetDevicesRequest) returns (DevicesResponse);
    rpc SendDeviceCommand(DeviceCommand) returns (CockpitResponse);

    // Window management
    rpc GetWindows(GetWindowsRequest) returns (WindowsResponse);
    rpc SendWindowCommand(WindowCommand) returns (CockpitResponse);

    // Layout management
    rpc SaveLayout(LayoutPreset) returns (CockpitResponse);
    rpc ApplyLayout(ApplyLayoutRequest) returns (CockpitResponse);
    rpc GetLayouts(GetLayoutsRequest) returns (LayoutsResponse);

    // Cross-device sync
    rpc StartSync(SyncRequest) returns (SyncStatus);
    rpc GetSyncStatus(GetSyncStatusRequest) returns (SyncStatus);

    // Stream device events
    rpc StreamDeviceEvents(StreamDeviceEventsRequest) returns (stream DeviceEvent);
}

message GetDevicesRequest {
    string request_id = 1;
    bool online_only = 2;
}

message DevicesResponse {
    repeated DeviceInfo devices = 1;
}

message GetWindowsRequest {
    string request_id = 1;
    string device_id = 2;         // Optional filter
}

message WindowsResponse {
    repeated WindowInfo windows = 1;
}

message ApplyLayoutRequest {
    string request_id = 1;
    string preset_id = 2;
}

message GetLayoutsRequest {
    string request_id = 1;
}

message LayoutsResponse {
    repeated LayoutPreset presets = 1;
}

message GetSyncStatusRequest {
    string request_id = 1;
}

message StreamDeviceEventsRequest {
    string request_id = 1;
    repeated string device_ids = 2;  // Filter by devices
}

message DeviceEvent {
    string device_id = 1;
    string event_type = 2;        // "connected", "disconnected", "status_change"
    DeviceInfo device = 3;
    int64 timestamp = 4;
}
